--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" />
-    <title>Ada Kay Alternate Juror</title>
+    <title>Ada ASL Media</title>
 </head>
 <body>
+    <nav>
+        <div>Ada ASL Media</div>
+        <div> Menu goes here... </div>
+    </nav>
     <h1>Ada Kay Alternate Juror</h1>
 </body>
 </html>
