--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
 </head>
 <body>
     <nav>
-        <div>Ada ASL Media</div>
-        <div> Menu goes here... </div>
+        <div>
+            <img src="images/logo-temp.jpg" alt="Logo" width="60"/>
+        </div>
+        <div> 
+            <div id="hamburger"></div>
+            <!-- <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Cases</li>
+                <li>Contact</li>
+            </ul> -->
+        </div>
     </nav>
     <h1>Ada Kay Alternate Juror</h1>
 </body>
