Playing with hamburger menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         </div>
         <div> 
             <div id="hamburger"></div>
-            <!-- <ul>
+            <!-- 
+                 class="open"
+                <ul>
                 <li>Home</li>
                 <li>About</li>
                 <li>Cases</li>
