--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             </ul> -->
         </div>
     </nav>
-    <h1>Ada Kay Alternate Juror</h1>
+    <header>
+        <div>
+            picture goes here
+        </div>
+        <div>
+            <h1>Ada Kay Alternate Juror</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore nobis nisi, placeat soluta asperiores vitae tempora harum dolorem provident ipsam fugit voluptas itaque maiores aliquid enim temporibus ducimus, recusandae laudantium repudiandae consequuntur, maxime id libero dolor! Perferendis harum recusandae mollitia placeat ratione minus in aspernatur autem vel, ipsum consequuntur officia?</p>
+        </div>
+    </header>
+    
 </body>
 </html>
